--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ocaml-btree"]
 	path = ocaml-btree
 	url = https://github.com/ma787/ocaml-btree.git
+[submodule "chamelon"]
+	path = chamelon
+	url = https://github.com/ma787/chamelon
